# hydra

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  RELEASE_NOTES_0.0.3.md  SDL_X11_BUG_REPORT.md
.github/workflows/: c-cpp.yml  makefile.yml
docker/: Dockerfile
docs/: component_status.md  driver_integration.md  freebsd_qemu.md  hardware_test_plan.md  hydra_spec.md  ip_integration.md  platform_backends.md  release_checklist_0_0_3.md  release_plan_0_0_4.md  windows_sim.md
drivers/bsd/: Makefile  Makefile.kmod  README.md  hydra_pci_stub.c
drivers/libhydra/: Makefile  hydra.c  hydra.h
drivers/linux/: Makefile  README.md  hydra_drm_stub.c  hydra_pcie_drv.c
drivers/linux/uapi/: hydra_drm.h  hydra_ioctl.h  hydra_regs.h
drivers/macos/: README.md  hydra_driverkit_stub.md
drivers/mesa/: README.md  hydra_context.c  hydra_gallium_stub.c  hydra_screen.c  meson.build
drivers/windows/: README.md  hydra_kmdf_stub.c
rtl/: axi_crossbar_stub.sv  axi_dma_stub.sv  axi_sdram_stub.sv  axi_stream_sink_stub.sv  axil_csr_stub.sv  surface_extractor.sv  trilinear_interpolator.sv  voxel_axil_csr.sv  voxel_axil_shell.sv  voxel_framebuffer_top.sv  voxel_memory_64.sv  voxel_raycaster_core_pipelined.sv  voxel_world_gen.sv
scripts/: fetch_ip.sh  hydra_blit_smoketest.c  hydra_drm_info.c  setup_sdk.sh
sim/: AGENTS.md  Makefile  Makefile~  live_sdl_main.cpp
sim/platform/: backend_fbdev.cpp  backend_gl.cpp  backend_macos.cpp  backend_ops.h  backend_sdl.cpp  backend_selector.cpp  backend_selector.h  backend_vulkan.cpp  backend_wayland.cpp  backend_win32.cpp  backend_x11.cpp  platform.h  platform_stub.cpp
sim/tests/: README.md
sim/tests/cocotb_hydra/: Makefile  test_hydra_smoke.py
sim/tests/qemu_stub/: README.md
sim/tests/rtl/: hdmi_crc.vvp  test_dma_loopback.sv  test_hdmi_crc_golden.sv
